--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "flask>=3.1.3",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
-    "pyecharts>=2.1.0",
+    "plotly>=5.24.0",
 ]
 
 [dependency-groups]
